# nafaq

./: .gitignore  README.md  bump.config.ts  dist  electrobun.config.ts  nuxt.config.ts  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.nuxt/: app.config.mjs  components.d.ts  imports.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json  ui.css
.nuxt/manifest/: latest.json
.nuxt/prerender/: index.mjs
.nuxt/types/: components.d.ts  imports.d.ts  nitro-imports.d.ts  plugins.d.ts
.output/: nitro.json
.output/public/: 200.html  404.html  index.html
app/: app.config.ts  app.vue
app/components/: AddContactModal.vue  CallControls.vue  ChatSidebar.vue  ConnectionProgress.vue  ConnectionShareModal.vue  DisconnectToast.vue  FileMessage.vue  IncomingCallBanner.vue  MissedCallToast.vue  NameInput.vue  NodeIdQrModal.vue  PreCallOverlay.vue  QrScanner.vue  TabBar.vue  TicketCreate.vue  TicketJoin.vue
app/composables/: useCall.ts  useChat.ts  useContacts.ts  useDM.ts  useMedia.ts  useMediaTransport.ts  useNodeRuntime.ts  useNotificationSounds.ts  usePresence.ts  useSettings.ts  useTicketUrl.ts
app/pages/: call.vue  contacts.vue  index.vue  lobby.vue  messages.vue  settings.vue
app/utils/: format.ts
deploy/iroh-relay/: Dockerfile  README.md  docker-compose.yml  relay-config.toml
docs/: GOALS.md
docs/testing/: standalone-relay-resilience.md
scripts/: android-cmake-toolchain.cmake  android-run.sh  post-wrap.ts
sidecar/: Cargo.toml
sidecar/src/: connection.rs  ipc.rs  lib.rs  main.rs  messages.rs  node.rs  protocol.rs
sidecar/tests/: integration.rs
src-tauri/: Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: codec.rs  commands.rs  connection.rs  identity.rs  lib.rs  main.rs  messages.rs  node.rs  presence.rs  protocol.rs  relay.rs  scenarios.rs  state.rs  test_support.rs
(+64 files in other folders)
