[package]
name = "nafaq-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.97"
iroh-tickets = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
