[package]
name = "nafaq"
version = "0.1.0"
edition = "2021"

[lib]
name = "nafaq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
iroh = "0.97"
iroh-tickets = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
opus = "0.3"
openh264 = "0.9"
noq-proto = "0.16"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.release]
strip = true
lto = "thin"
opt-level = "s"
